# cyd

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml
cyd/: Cargo.toml  run.sh
cyd/benches/: eval.rs  main_benches.rs  search.rs
cyd/src/: cli.rs  lib.rs  main.rs  utils.rs
cyd/src/evaluate/: evaluate.rs  mod.rs
cyd/src/search/: mod.rs  search.rs  search_test.rs  timer.rs
cyd/src/search/transposition_table/: entry_flag.rs  mod.rs  table.rs  transposition_entry.rs  transposition_table.rs
cyd/src/utils/: book.rs  game.rs  mod.rs
cyd_lichess/: .README.md.swp  README.md  package-lock.json  package.json
cyd_lichess/src/: .index.js.swp  env.js  game.js  index.js  move.js
cyd_simulation/: Cargo.toml
cyd_simulation/src/: main.rs
cyd_web/: package-lock.json  package.json
cyd_web/src/: .index.js.swp  index.js
opening_book/: Cargo.toml  opening_book.json
opening_book/src/: book.rs  file.rs  game.rs  main.rs  moves.rs  utils.rs
