[package]
name = "cyd"
version = "0.1.0"
edition = "2018"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"

[lib]
name = "cyd"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pleco = "0.5.0"
clap = "3.0.0-beta.4"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"

[[bench]]
name = "main_benches"
harness = false
