[package]
name = "cyd"
version = "0.1.0"
edition = "2018"
description = "A chess bot"
license = "MIT/Apache-2.0"

[lib]
name = "cyd"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pleco = "0.5.0"
clap = "2.33.3"
structopt = "0.3"
serde_json = "1.0"
evmap = "10.0.2"
evmap-derive = "0.2.0"
fnv = "1.0.7"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"

[[bench]]
name = "main_benches"
harness = false

[profile.release]
lto = true
opt-level=3
debug = true
panic = "abort"
